--- a/configs/policy/tasks/task1_moving_grasp.yaml
+++ b/configs/policy/tasks/task1_moving_grasp.yaml
@@ -12,7 +12,7 @@ task:
   # Language Instruction（英文，SmolVLA使用）
   # 这个instruction会在每个batch中作为任务条件输入模型
   # 优化版本：明确描述目标位置的特征
-  language_instruction: 'Grasp the object from the conveyor belt using visual guidance. Place it precisely at the first marked target location on the table. Then grasp it again and place it precisely at the second marked target location on the table.'
+  language_instruction: 'Grasp the object from the moving conveyor belt using visual guidance. Place it precisely at the center of the first colored target block on the table, ensuring the object center aligns with the target center. Then grasp it again and place it precisely at the center of the second colored target block on the table, maintaining visual alignment throughout the placement.'
 
   # 数据配置
   data:
