--- a/configs/policy/tasks/task2_weighing.yaml
+++ b/configs/policy/tasks/task2_weighing.yaml
@@ -3,14 +3,14 @@
 # 任务基本信息
 task:
   id: 2
-  name: "weighing"
-  stage: 2  # Stage 2: 从任务1模型继续
+  name: 'weighing'
+  stage: 2 # Stage 2: 从任务1模型继续
 
   # 任务描述（中文）
-  description: "机器人从移动的传送带上拾取快递袋，先放置在电子秤上完成称重，随后再次拾起并放入指定收纳筐中"
+  description: '机器人从移动的传送带上拾取快递袋，先放置在电子秤上完成称重，随后再次拾起并放入指定收纳筐中'
 
   # Language Instruction（英文）
-  language_instruction: "Pick up the package from the conveyor belt, weigh it on the electronic scale, then pick it up again and place it in the designated storage container"
+  language_instruction: 'Pick up the package from the conveyor belt, weigh it on the electronic scale, then pick it up again and place it in the designated storage container'
 
   # 数据配置
   data:
@@ -18,23 +18,21 @@ task:
     repoid: 'lerobot/task2_weighing'
     episodes_to_use: [0, 199]
 
-  # 训练配置
+  # 训练配置（方案A：单任务专用模型）
   training:
-    max_epoch: 25  # 任务2可能需要更多epochs（称重动作更复杂）
+    max_epoch: 200 # 单任务训练，增加到200个epochs充分学习
 
-    # Stage 2: 从任务1的最佳checkpoint继续
-    # 格式: outputs/train/{task}/{method}/run_{timestamp}/best
-    # 需要手动指定任务1的timestamp！
-    resume_from: 'task'
-    resume_task_id: 1
-    resume_path: 'outputs/train/task1_moving_grasp/smolvla_sequential/run_XXXXXX_XXXXXX/best'  # 修改XXXXXX为实际timestamp
+    # 方案A：从HuggingFace预训练开始（独立训练，不依赖任务1）
+    resume_from: 'pretrained'
+    pretrained_path: 'lerobot/smolvla_base' # 使用预训练模型
 
-    # 降低学习率（防遗忘策略）
+    # 优化器配置（方案A：单任务可以使用更高学习率）
     policy:
-      optimizer_lr: 0.00005  # 减半至0.00005，保护任务1知识
-      scheduler_warmup_steps: 800   # 模型已经warm，但仍需适应
-      scheduler_decay_steps: 20000  # 延长decay
+      optimizer_lr: 0.00012 # 提高学习率（0.00005→0.00012），单任务专用优化
+      scheduler_warmup_steps: 3000 # 标准warmup步数
+      scheduler_decay_steps: 50000 # 更长decay，配合更多epochs
 
-  # Replay配置（防遗忘的关键）
-  replay:
-    task1_episodes: 40  # 从任务1回放40个episodes（约20%）
+
+  # Replay配置（方案A：不使用replay，单任务专用）
+  # replay:
+  #   task1_episodes: 0  # 不混合其他任务数据
