--- a/configs/deploy/kuavo_vla_sim_env.yaml
+++ b/configs/deploy/kuavo_vla_sim_env.yaml
@@ -5,6 +5,14 @@ hydra: # Hydra 配置文件保存目录
     dir: ./outputs/kuavo_vla_sim_deploy_hydra_save/multirun/${now:%Y%m%d_%H%M%S}
     subdir: ${hydra:job.override_dirname}
 
+# ==================== HuggingFace Configuration ====================
+# Set HuggingFace download mirror (optional)
+# If not set, uses default HuggingFace Hub (https://huggingface.co)
+# Common mirrors:
+#   - China mirror: https://hf-mirror.com
+#   - Leave commented out to use default
+hf_endpoint: 'https://hf-mirror.com' # Uncomment and modify if needed
+
 # env config，VLA策略仿真器运行配置文件
 real: false # 是否使用真实机器人，仿真环境为false
 
