--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -96,8 +96,11 @@ training:
 
   # 数据加载
   batch_size: 32 # 更稳定的梯度更新
+  accumulation_steps: 2 # 等效64
   num_workers: 20 # 保持不变
   drop_last: True # 保证每个batch大小一致，避免BN层统计偏差
+
+  use_amp: True # 使用混合精度训练
 
   # 日志和保存
   save_freq_epoch: 3 # 每3个epoch保存一次checkpoint（方案A：更频繁保存）
