--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -45,7 +45,7 @@ policy:
   train_state_proj: True # 训练state投影层
 
   # 观测配置
-  n_obs_steps: 8 # 增加时序上下文（6→8），帮助模型理解动作序列的阶段
+  n_obs_steps: 2
 
   # 动作空间配置（Kuavo双臂16关节机器人）
   # 注意：为了使用SmolVLA预训练权重，state/action维度必须与预训练模型一致（32维）
